--- a/Proyecto_LDPII/src/main/resources/application.properties
+++ b/Proyecto_LDPII/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=Proyecto_LDPII
 server.port=8081
 spring.datasource.url=jdbc:mysql://localhost:3306/BD_LP
 spring.datasource.username=root
-spring.datasource.password=mySql29
+spring.datasource.password=mysql
 #spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 
 
