--- a/Proyecto_LDPII/src/main/resources/application.properties
+++ b/Proyecto_LDPII/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=Proyecto_LDPII
 server.port=8081
-spring.datasource.url=jdbc:mysql://localhost:3306/BD_LP
+spring.datasource.url=jdbc:mysql://localhost:3306/alex_fiestas
 spring.datasource.username=root
 spring.datasource.password=mysql
 #spring.datasource.driver-class-name=com.mysql.jdbc.Driver
