--- a/Proyecto_LDPII/src/main/resources/application.properties
+++ b/Proyecto_LDPII/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=Proyecto_LDPII
 server.port=8091
 spring.datasource.url=jdbc:mysql://localhost:3306/alex_fiestas
 spring.datasource.username=root
-spring.datasource.password=mysql
+spring.datasource.password=
 #spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 
 
