--- a/Proyecto_LDPII/src/main/resources/application.properties
+++ b/Proyecto_LDPII/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.application.name=Proyecto_LDPII
-server.port=8091
+server.port=8080
 spring.datasource.url=jdbc:mysql://localhost:3306/alex_fiestas
 spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.password=mysql
 #spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 
 
@@ -12,3 +12,5 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.hibernate.naming.implicit-strategy=org.hibernate.boot.model.naming.ImplicitNamingStrategyLegacyJpaImpl
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+
+debug=true
